API adjustments: Author => Authors, Game Type => Game Types